examples/test/testpolicy13612.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13612
  namespace: namespace189
spec:
  podSelector:
    matchLabels:
      key26: value24
      key5: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value24
          key1: value29
      podSelector:
        matchLabels:
          key12: value33
